array.island.Island.scala.error
Compilation error:
Island:20: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
   position match {
   ^Island:25: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  islandRecursif(num,(num.length - 1),0,num(0),1)
  ^